--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
+  <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Blog page for Ollie's code adventures"
+    />
+  <title>Ollie Codes - Blog Admin</title>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
