switching to tailwind

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Blog page for Ollie's code adventures"
     />
-  <title>Ollie Codes - Blog Admin</title>
+  <title>Ollie The Dev - Blog Admin</title>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
